# plotutils

./: .coverage  .gitignore  README.md  justfile  main.py  mkdocs.yml  prek.toml  pyproject.toml
.cccicd/: run_coverage.py
.github/workflows/: coverage.yml  docs.yml
demos/: auc.py  linked-auc.py  linked-mouseover.py
demos/_output/: auc.html  linked-mouseover.html
docs/: altair_polars_onboarding.md  gen_auc_chart.py  gen_charts.py  index.md  justfile  tooling_onboarding.md
docs/dev/: altair_polars_onboarding.md  upset_construction.md
docs/plots/: auc.md  auc_chart.html  auc_report.md  boxplot.md  concat.md  deviations.md  error_bars.md  forest.md  grouped_histogram.md  parallel.md  predictions_errors.md  raincloud.md  upset.md
just/: base.just  docs.just
src/plotutils/: __init__.py  auc.py  boxplot.py  concat.py  datasets.py  errorbar.py  forest.py  hist.py  parallel.py  raincloud.py  themes.py  uncertainty.py  upset.py
tests/: conftest.py  test_auc.py  test_boxplot.py  test_errorbar.py  test_forest.py  test_grouped_hist.py  test_parallel.py  test_plot_error_bars.py  test_raincloud.py  test_theme.py  test_uncertainty.py  test_upset.py  test_vchart.py
tests/__snapshots__/: test_auc.ambr  test_boxplot.ambr  test_errorbar.ambr  test_forest.ambr  test_grouped_hist.ambr  test_parallel.ambr  test_plot_error_bars.ambr  test_raincloud.ambr  test_theme.ambr  test_uncertainty.ambr  test_vchart.ambr
