[project]
name = "plotutils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "coverage-badge>=1.1.2",
    "polars>=1.36.1",
]

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "syrupy>=5.0.0",
    "vl-convert-python>=1.8.0",
]
