[project]
name = "plotutils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "coverage-badge>=1.1.2",
    "polars>=1.36.1",
]

[dependency-groups]
demos = [
    "numpy>=2.0",
]
dev = [
    "coverage>=7.13.0",
    "scikit-learn>=1.6",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.1",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "syrupy>=5.0.0",
    "vl-convert-python>=1.8.0",
    "pauc>=0.2.1",
]
